# race-drone-rl

./: README.md  get_normalization.ipynb  pyproject.toml
assets/tracks/: circle_track.csv  sample_track.csv  single_gate.csv
race_rl/control/: __init__.py  mpc.py  mpc_traj.py  run_mpc.py
race_rl/env/: RaceAviary.py  __init__.py  utils.py
race_rl/nn/: __init__.py  build_network.py
race_rl/path_planing/: __init__.py  geo_planer.py  utils.py
race_rl/race_track/: gate.py  segment.py  track.py  utils.py
race_rl/visualization/: visualize.py
tests/: loading_test.py  test.py  test_A2C.py  test_completed.py  test_env.py  test_many.py  test_modes.py  test_obs.py  test_rewards.py  test_saving.py  test_start.py  test_training.py  visualize_gate_field.ipynb
training/: eval.py  eval_byhand.py  train.py
